syntax = "proto3";

package customer.services.v1;

import "google/protobuf/timestamp.proto";
import "customer/models/v1/customer_profile.proto";
import "customer/models/v1/account_status.proto";
import "types/guid.proto";
import "types/pagination.proto";
import "types/pagination_metadata.proto";

option csharp_namespace = "DKH.CustomerService.Contracts.Services.V1";

// CustomerCrudService provides admin-level CRUD operations across all storefronts.
// All methods accept optional storefront_id - when null/empty, returns data from all storefronts.
service CustomerCrudService {
  // Search customers by query (admin operation - searches across storefronts when storefront_id is null)
  rpc SearchCustomers(SearchCustomersRequest) returns (SearchCustomersResponse);

  // List customers with filtering (admin operation - returns all when storefront_id is null)
  rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);

  // Get customer statistics (admin operation - can query across storefronts)
  rpc GetCustomerStats(GetCustomerStatsRequest) returns (GetCustomerStatsResponse);

  // Block customer (admin operation - can block customers from any storefront)
  rpc BlockCustomer(BlockCustomerRequest) returns (BlockCustomerResponse);

  // Unblock customer (admin operation - can unblock customers from any storefront)
  rpc UnblockCustomer(UnblockCustomerRequest) returns (UnblockCustomerResponse);

  // Suspend customer temporarily (admin operation - can suspend customers from any storefront)
  rpc SuspendCustomer(SuspendCustomerRequest) returns (SuspendCustomerResponse);
}

message SearchCustomersRequest {
  optional proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Optional for admin - searches all storefronts when null
  string query = 2;
  proto.platform.grpc.common.types.PaginationRequest pagination = 3;
}

message SearchCustomersResponse {
  repeated customer.models.v1.CustomerProfile customers = 1;
  proto.platform.grpc.common.types.PaginationMetadata pagination = 2;
}

message ListCustomersRequest {
  optional proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Optional for admin - returns all customers when null
  proto.platform.grpc.common.types.PaginationRequest pagination = 2;
  string sort_by = 3;
  bool sort_descending = 4;
  customer.models.v1.AccountStatusEnum status_filter = 5;
}

message ListCustomersResponse {
  repeated customer.models.v1.CustomerProfile customers = 1;
  proto.platform.grpc.common.types.PaginationMetadata pagination = 2;
}

message GetCustomerStatsRequest {
  optional proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Optional for admin - can query stats from any storefront
  string telegram_user_id = 2;
}

message GetCustomerStatsResponse {
  customer.models.v1.CustomerStats stats = 1;
}

message BlockCustomerRequest {
  optional proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Optional for admin - can block in any storefront
  string telegram_user_id = 2;
  string reason = 3;
  string blocked_by = 4;
}

message BlockCustomerResponse {
  bool success = 1;
  customer.models.v1.CustomerProfile profile = 2;
}

message UnblockCustomerRequest {
  optional proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Optional for admin - can unblock in any storefront
  string telegram_user_id = 2;
}

message UnblockCustomerResponse {
  bool success = 1;
  customer.models.v1.CustomerProfile profile = 2;
}

message SuspendCustomerRequest {
  optional proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Optional for admin - can suspend in any storefront
  string telegram_user_id = 2;
  google.protobuf.Timestamp suspend_until = 3;
  string reason = 4;
  string suspended_by = 5;
}

message SuspendCustomerResponse {
  bool success = 1;
  customer.models.v1.CustomerProfile profile = 2;
}
